Adição dos topiquinhos

--- a/index.html
+++ b/index.html
@@ -42,8 +42,11 @@
       <img src="assets/imagens/topcom.png" />
 
       <hr />
-
-      <h2>Sobre</h2>
+      <div class="box_titulo">
+        <img src="assets/imagens/maestro.png" style="max-height: 100px; height: auto; width: auto;">
+        <h2>Sobre</h2>
+      </div>
+      
       <p>
         O Topcom, Torneio de Programação de Computadores, promovido pelo PET
         Engenharia de Computação (UFES) proporciona aos estudantes de computação
@@ -60,7 +63,10 @@
 
       <hr />
 
-      <h2>Regras</h2>
+      <div class="box_titulo">
+        <img src="assets/imagens/kpop.png" style="max-height: 100px; height: auto; width: auto;">
+        <h2>Regras</h2>
+      </div>
       <p>
         A competição segue os moldes da Maratona de Programação da SBC! É
         necessário que todos os participantes leiam o
@@ -72,7 +78,10 @@
 
       <hr />
 
-      <h2>Programação</h2>
+      <div class="box_titulo">
+        <img src="assets/imagens/Topiquinho Rei do Baião.png" style="max-height: 100px; height: auto; width: auto;">
+        <h2>Programação</h2>
+      </div>
       <ul class="programação">
         <li id="o_de_cima">
           <p>09:00-10:30</p>
