--- a/inscrições.html
+++ b/inscrições.html
@@ -39,8 +39,11 @@
         />
       </nav>
 
-      <h2>Como se inscrever para o topcom?</h2>
+      <div class="box_titulo">
+        <img src="assets/imagens/Slash.png" style="max-height: 100px; height: auto; width: auto;">
+        <h2>Como se inscrever para o topcom?</h2>
 
+      </div>
       <hr>
 
       <h3>UFES campus Goiabeiras</h3>
