--- a/programação.html
+++ b/programação.html
@@ -35,7 +35,12 @@
         />
       </nav>
       
-      <h2>Programação do evento</h2>
+      <div class="box_titulo">
+        <img src="assets/imagens/metal.png" style="max-height: 100px; height: auto; width: auto;">
+        <h2>Programação do evento</h2>
+      </div>
+      
+
 
       <hr>
 
